new feature: send notification when workflow is done